# Convert-any-SaaS-application-into-an-Agentic-interface

./: .gitignore  AGENTIC_SEARCH_PLAYBOOK.md  AGENTS.md  AGENT_SEE_FULL_INTEGRATION_BLUEPRINT.md  IMPLEMENTATION_PLAN.md  INTERNAL_AUDIT_NOTE.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_RUNBOOK.md  QA_VALIDATION_SUMMARY.md  README.md  SKILL.md  agentic_search_magazine_content.md  agentic_search_magazine_slide_content.md  pyproject.toml
artifacts/playwright_e2e/: playwright_e2e_results.json
artifacts/playwright_e2e/bakery_pipeline/: AGENTS.md  OPERATIONAL_READINESS.md  agent_card.json  capability_graph.json  openapi.yaml
artifacts/playwright_e2e/bakery_pipeline/mcp_server/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  fly.toml  operationalization_report.json  pyproject.toml  railway.json  render.yaml  route_map.json  runtime_state.json  server.py  tool_metadata.json
docs/: meta_plugin_refactor_plan.md  plugin_first_skill_system_plan.md  strict_3_pass_verification_matrix.md  strict_3_pass_verification_report.md
scripts/: playwright_e2e_validation.py  run_strict_verification_pass.sh
src/agent_see/: cli.py
src/agent_see/core/: analyzer.py  generator.py  mapper.py  verifier.py
src/agent_see/discovery/: __init__.py  api_prober.py  browser_interceptor.py  openapi_finder.py  page_crawler.py
src/agent_see/eval/: metrics.py  prover.py
src/agent_see/execution/: __init__.py  (+4 more)
tests/: test_e2e.py  test_full_pipeline.py  test_launch_integration.py  test_plugin_integration.py  test_sprint2.py  test_sprint3_5.py
tests/fixtures/: booking_openapi.json  ecommerce_openapi.json  petstore_openapi.json
verification_logs/pass_2/: summary.tsv
(+53 files in other folders)
