[project]
name = "127-0-0-1:43987-agent"
version = "0.1.0"
description = "Agent-optimized MCP server for http://127.0.0.1:43987"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "agent-see>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
